<!--
  ~ Copyright (c) 2020. Saincahi Project.
  ~
  ~ Licensed under the GNU General Public License v3.0
  ~
  ~ https://www.gnu.org/licenses/gpl-3.0.html
  ~
  ~ Permissions of this strong copyleft license are conditioned on making available complete
  ~ source code of licensed works and modifications, which include larger works using a licensed
  ~ work, under the same license. Copyright and license notices must be preserved. Contributors
  ~ provide an express grant of patent rights.
  -->

<resources>
    <string name="app_name">Saincahi Application</string>
    <string name="tVBienvenido">Bienvenido a la aplicación Saincahi</string>
    <string name="oPTTema">Tema</string>
    <string name="oPTPermisos">Permisos</string>
    <string name="oPTHistorial">Ver historial</string>
    <string name="oPGuardar">Guardar en fichero</string>
    <string name="bTEstado">Permiso para el estado del teléfono</string>
    <string name="bTRegistro">Permiso para el registro de llamadas</string>
    <string name="bTContactos">Permisos para obtener los contactos</string>
    <string name="tVPermisos">Configuración de permisos</string>
    <string name="bTObtenerDatos">Obtener historial</string>
    <string name="bTEliminar">Eliminar historial</string>
    <string name="bTMemInterna">Guardar en memoria interna</string>
    <string name="bTMemExterna">Guardar en memoria externa</string>
    <string name="bTLeerMemInterna">Leer en memoria interna</string>
    <string name="bTLeerMemExterna">Leer en memoria externa</string>
    <string name="bTBorrarFichero">Borrar Contenido Interno</string>
    <string name="bTBorrarFicheroExterno">Borrar Contenido Externo</string>
</resources>