<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. Saincahi Project.
  ~
  ~ Licensed under the GNU General Public License v3.0
  ~
  ~ https://www.gnu.org/licenses/gpl-3.0.html
  ~
  ~ Permissions of this strong copyleft license are conditioned on making available complete
  ~ source code of licensed works and modifications, which include larger works using a licensed
  ~ work, under the same license. Copyright and license notices must be preserved. Contributors
  ~ provide an express grant of patent rights.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/bTEstado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bTEstado"
        app:layout_constraintBottom_toTopOf="@+id/bTRegistro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tVPermisos" />

    <Button
        android:id="@+id/bTRegistro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bTRegistro"
        app:layout_constraintBottom_toTopOf="@+id/bTContactos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bTEstado" />

    <Button
        android:id="@+id/bTContactos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bTContactos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bTRegistro" />

    <TextView
        android:id="@+id/tVPermisos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tVPermisos"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>